Repair bad practice window onload

--- a/snippets/header-sticky-elementor.html
+++ b/snippets/header-sticky-elementor.html
@@ -29,12 +29,12 @@
         }
     }
 
-    window.onload = function() {
+    window.addEventListener("load", function() {
         stickyHeaderInit()
-    };
-    window.onscroll = function() {
+    });
+    window.addEventListener("scroll", function() {
         scrollCheck()
-    };
+    });
 </script>
 
 <style>
